gluecodium/src/test/resources/smoke/errors/output/android-kotlin/com/example/smoke/SomethingBadHappenedException.kt
/*

 *
 */

@file:JvmName("SomethingBadHappenedExtensions")

package com.example.smoke


internal class SomethingBadHappenedException(@JvmField val error: SomeInternalEnum) : Exception(error.toString())


